# rpc-vispy

./: README.md  demo.py  pyproject.toml  requirements.in
rpcvispy/: __init__.py  core.py  primitives.py
